--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "example",
   "version": "0.0.0",
+  "private": true,
+  "main": "main.ts",
+  "homepage": "./",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +11,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
     "@angular/common": "^17.0.0",
